fix: quotation list error